[project]
name = "sber-project-hack"
version = "0.1.1"
description = "Opensource project on Sber Itmo Bootcamp from team 4"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "streamlit (>=1.51.0,<2.0.0)",
    "langchain (>=1.0.5,<2.0.0)",
    "langchain-core (>=1.0.4,<2.0.0)",
    "langchain-openai (>=1.0.2,<2.0.0)",
    "langgraph (>=1.0.3,<2.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "ddgs (>=9.9.0,<10.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "chromadb (>=1.3.4,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"